fixed image spacing on front page

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Parallax Child
 Description: Child theme for Parallax theme
-Author: AirSkull updated 20th October 2014
-Version: 3.8.145
+Author: AirSkull updated 12th February 2014
+Version: 3.8.146
 Template: parallax
 */
 
@@ -252,10 +252,16 @@ img.post-img {
 /* front page book images section*/
 div.image-wrap {
     display: block !important;
+    margin-bottom: 15px !important
 }
 div.image-wrap img {
     display: block;
     margin:0 auto;
+}
+
+text-7276-1-0-0.module-text {
+    margin-bottom: 25px;
+    margin-top: 75px;
 }
 
 #text-7228-1-1-4 p {
